# aws-mfa

./: README.md  setup.cfg  setup.py  tools.py
docs/: conf.py  index.rst
requirements/: dev.txt  test.txt
src/mfa/: app.py  cli.py  util.py
