[metadata]
name = mfa
version = 1.0.0
author = Thomas Edwards

[options]
# install_requires = 
#     pyyaml>=5.3.1
#     boto3>=1.16.25
#     requests>=2.25.0
#     jsonschema>=3.2.0
#     jinja2>=2.11.2
#     click>=7.1.2
package_dir=
    =src
packages=find:
python_requires = >= 3.6

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    aws-mfa = mfa.cli:main